--- a/trunk/res/layout/food_list.xml
+++ b/trunk/res/layout/food_list.xml
@@ -1,13 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-      android:layout_width="wrap_content"
-    	android:layout_height="wrap_content">
-    
-    <ListView android:id="@+id/android:list"
-          android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"/>
-  	<TextView android:id="@+id/android:empty"
-          android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="no_notes"/>
-</LinearLayout>
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/column0"
+                android:layout_width="200dip"
+                android:layout_weight="3"
+                style="@style/HeaderItem"/>
+            
+            <TextView
+                android:id="@+id/column1"
+                style="@style/HeaderItem"/>
+            
+            <TextView
+                android:id="@+id/column2"
+                style="@style/HeaderItem"/>
+            
+            <TextView
+                android:id="@+id/column3"
+                style="@style/HeaderItem"/>
+            
+            <TextView
+                android:id="@+id/column4"
+                style="@style/HeaderItem"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <ListView
+                android:id="@+id/android:list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/android:empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="no_notes" />
+        </LinearLayout>
+    </LinearLayout>
+
+</HorizontalScrollView>
