--- a/trunk/res/layout/food_row.xml
+++ b/trunk/res/layout/food_row.xml
@@ -1,44 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="wrap_content"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentRight="true"
-    android:orientation="horizontal">
+    android:background="#000000"
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        android:background="#ffffff"
-        android:layout_margin="9dip"
-        android:textColor="#000000"/>
+        style="@style/RowItem"
+        android:layout_width="200dip"
+        android:layout_weight="3"/>
     <TextView
         android:id="@+id/text2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        android:background="#ffffff"
-        android:layout_margin="9dip"
-        android:textColor="#000000"/>
+        style="@style/RowItem"/>
+
     <TextView
         android:id="@+id/text3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        android:background="#ffffff"
-        android:layout_margin="9dip"
-        android:textColor="#000000"/>
+        style="@style/RowItem"/>
+
     <TextView
         android:id="@+id/text4"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        android:background="#ffffff"
-        android:layout_margin="9dip"
-        android:textColor="#000000"/>
+        style="@style/RowItem"/>
+
     <TextView
         android:id="@+id/text5"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        android:background="#ffffff"
-        android:layout_margin="9dip"
-        android:textColor="#000000"/>
+        style="@style/RowItem"/>
 
 </LinearLayout>
