--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -8,6 +8,8 @@
         android:id="@+id/textView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:textSize="29dip"
+        android:textColor="#ff78ff"
         android:text="@string/Title"/>
     
     <ListView 
